deploy/kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-jwt-app
  labels:
    app: flask-jwt-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-jwt-app
  template:
    metadata:
      labels:
        app: flask-jwt-app
    spec:
      containers:
      - name: flask-jwt-app
        image: 192.168.70.46:8082/flask-jwt-app:0.0.2  # Replace with your Nexus image URL
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: nexus-credentials  # Secret for pulling images from Nexus
