deploy/kubectl/ingress-nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-nodeport
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30007  # Optional: Specify a custom NodePort
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30008  # Optional: Specify a custom NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
