deploy/kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-jwt-app-service
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: flask-jwt-app
